# stockgraph-oxigraph

./: .gitignore  README.md  pyproject.toml  requirements.txt
Financial-Knowledge-Graphs/data/: latest_news.csv
docs/: sec_disclosure_rules_resources.md
queries/: construct_stock_subgraph.sparql  latest_prices.sparql  list_stocks.sparql  news_sample.sparql
scripts/: build_oxigraph.py  export_rdf.py  query_oxigraph.py  visualize_g6.py
src/stockgraph_oxigraph/: __init__.py  builder.py  vocab.py
